# report1

./: .gitignore  A2_compute_F.py  A2_linked_points.py  A4_epipolar_lines.py  A5_not_computed_points.py  B7_intrinsic_parameters.py  CMakeLists.txt  Rapport.docx  compute_A.py  compute_F.py  main.cpp  main.py
8points/: 8point_math_ver5_2.nb  8point_math_ver7_0.nb  autocalib.nb  readme.txt
img/not_same_plane/: img1.xcf  img2.xcf  list_of_points.txt
img/not_same_plane/extra_points/: extra_points.txt
img/not_same_plane/not_computed/: not_computed_points.txt
img/same_plane/: img1.xcf  img2.xcf  list_of_points.txt
img/same_plane/extra_points/: extra_points.txt
img/same_plane/not_computed/: not_computed_points.txt
save_img_prof/not_same_plane/: list_of_points.txt
save_img_prof/same_plane/: list_of_points.txt
save_img_prof/same_plane/extra_points/: extra_points.txt
